syntax = "proto3";

message MonsterState {
  string monster_name = 1;
  int32 x_coord = 2;
  int32 y_coord = 3;
}
